@@ -1,7 +1,6 @@
 package com.drmangotea.tfmg.content.machinery.metallurgy.coke_oven;
 
 import com.drmangotea.tfmg.base.TFMGUtils;
-import com.drmangotea.tfmg.base.lang.TFMGLang;
 import com.drmangotea.tfmg.base.lang.TFMGTexts;
 import com.drmangotea.tfmg.config.TFMGConfigs;
 import com.drmangotea.tfmg.recipes.CokingRecipe;
@@ -11,13 +10,10 @@ import com.drmangotea.tfmg.registry.TFMGRecipeTypes;
 import com.simibubi.create.api.equipment.goggles.IHaveGoggleInformation;
 import com.simibubi.create.foundation.blockEntity.SmartBlockEntity;
 import com.simibubi.create.foundation.blockEntity.behaviour.BlockEntityBehaviour;
-import com.simibubi.create.foundation.fluid.CombinedTankWrapper;
 import com.simibubi.create.foundation.fluid.SmartFluidTank;
 import com.simibubi.create.foundation.item.ItemHelper;
 import com.simibubi.create.foundation.item.SmartInventory;
-import com.simibubi.create.foundation.utility.CreateLang;
 import net.createmod.catnip.animation.LerpedFloat;
-import net.createmod.catnip.lang.LangBuilder;
 import net.createmod.catnip.math.VecHelper;
 import net.createmod.catnip.platform.CatnipServices;
 import net.minecraft.ChatFormatting;
@@ -29,6 +25,7 @@ import net.minecraft.network.chat.Component;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.world.entity.item.ItemEntity;
 import net.minecraft.world.item.crafting.RecipeHolder;
+import net.minecraft.world.item.crafting.RecipeManager;
 import net.minecraft.world.level.ChunkPos;
 import net.minecraft.world.level.block.entity.BlockEntityType;
 import net.minecraft.world.level.block.state.BlockState;
@@ -42,7 +39,6 @@ import net.neoforged.neoforge.items.IItemHandlerModifiable;
 import net.neoforged.neoforge.items.wrapper.RecipeWrapper;
 
 import java.util.List;
-import java.util.Optional;
 
 import static net.minecraft.world.level.block.HorizontalDirectionalBlock.FACING;
 
@@ -54,12 +50,16 @@ public class CokeOvenBlockEntity extends SmartBlockEntity implements IHaveGoggle
     protected IFluidHandler primaryFluidCapability;
     protected IFluidHandler secondaryFluidCapability;
     public IItemHandlerModifiable itemCapability;
-    int timer = -1;
     public LerpedFloat doorAngle = LerpedFloat.angular();
     public boolean createNextTick;
     public BlockPos controller = getBlockPos();
     public int size = 1;
     public boolean forceOpen = false;
+
+    int totalTime = -1;
+    int timer = -1;
+    private final RecipeManager.CachedCheck<RecipeWrapper, CokingRecipe> quickCheck;
+
     public CokeOvenBlockEntity(BlockEntityType<?> type, BlockPos pos, BlockState state) {
         super(type, pos, state);
         setLazyTickRate(10);
@@ -72,30 +72,30 @@ public class CokeOvenBlockEntity extends SmartBlockEntity implements IHaveGoggle
         primaryFluidCapability =  primaryTank;
         secondaryFluidCapability = secondaryTank;
         createNextTick = true;
+
+        this.quickCheck = RecipeManager.createCheck(TFMGRecipeTypes.COKING.getType());
     }
 
     public void onContentsChanged(){
-        if(!inventory.isEmpty()&& timer == -1){
+        if(!inventory.isEmpty() && timer == -1){
             executeRecipe();
         }
-        if(inventory.isEmpty())
+        if(inventory.isEmpty()) {
+            totalTime = -1;
             timer = -1;
+        }
     }
 
-    public void executeRecipe(){
-
-        Optional<RecipeHolder<CokingRecipe>> optional = TFMGRecipeTypes.COKING.find(new RecipeWrapper(inventory), level);
-        if(optional.isEmpty())
+    public void executeRecipe() {
+        if(level == null)
             return;
 
-        CokingRecipe recipe = optional.get().value();
-
-        if(recipe.getIngredients().get(0).test(inventory.getItem(0)))
-            timer = recipe.getProcessingDuration()/(Math.max(size/2,1));
+        totalTime = quickCheck.getRecipeFor(new RecipeWrapper(inventory), level).map((holder) -> holder.value().getProcessingDuration()).orElse(0) / (Math.max(size / 2, 1));
+        timer = totalTime;
     }
 
     private void onFluidChanged(FluidStack stack) {
-        if (!hasLevel())
+        if (level == null)
             return;
         if (!level.isClientSide) {
             setChanged();
@@ -108,11 +108,12 @@ public class CokeOvenBlockEntity extends SmartBlockEntity implements IHaveGoggle
     @Override
     public void tick() {
         super.tick();
+        if(level == null)
+            return;
 
         tickRecipe();
 
         if(level.isClientSide){
-
             doorAngle.chase((timer > 0 && timer < 50) || forceOpen ? 90 : 0, 0.1f, LerpedFloat.Chaser.EXP);
             doorAngle.tickChaser();
             if(!forceOpen)
@@ -125,42 +126,50 @@ public class CokeOvenBlockEntity extends SmartBlockEntity implements IHaveGoggle
     }
 
     public void tickRecipe(){
-        if(inventory.isEmpty()||timer == -1)
+        if(level == null)
+            return;
+        if(inventory.isEmpty() || timer == -1)
             return;
 
-        Optional<RecipeHolder<CokingRecipe>> optional = TFMGRecipeTypes.COKING.find(new RecipeWrapper(inventory), level);
+        RecipeHolder<CokingRecipe> recipeholder;
+        if (!inventory.isEmpty()) {
+            recipeholder = quickCheck.getRecipeFor(new RecipeWrapper(inventory), level).orElse(null);
+        } else {
+            recipeholder = null;
+        }
 
-        if(optional.isEmpty()) {
+        if(recipeholder == null) {
+            totalTime = -1;
             timer = -1;
             return;
         }
-        CokingRecipe recipe = optional.get().value();
 
-        if(timer ==0){
+        CokingRecipe recipe = recipeholder.value();
+
+        if(timer == 0){
+            totalTime = -1;
             timer = -1;
-            inventory.getItem(0).shrink(recipe.getIngredients().get(0).getItems()[0].getCount());
+            inventory.getItem(0).shrink(recipe.getIngredients().getFirst().getItems()[0].getCount());
 
             Direction direction =  getBlockState().getValue(FACING);
 
-            Vec3 dropVec = VecHelper.getCenterOf(worldPosition.relative(direction))
-                    .add(0,0.4,0);
+            Vec3 dropVec = VecHelper.getCenterOf(worldPosition.relative(direction)).add(0,0.4,0);
             ItemEntity dropped = new ItemEntity(level, dropVec.x, dropVec.y, dropVec.z, recipe.getResultItem(level.registryAccess()).copy());
             dropped.setDefaultPickUpDelay();
             dropped.setDeltaMovement(direction.getAxis() == Direction.Axis.X ? direction == Direction.WEST ? -.01f : .01f : 0, 0.05f, direction.getAxis() == Direction.Axis.Z ? direction == Direction.NORTH ? -.01f : .01f : 0);
             level.addFreshEntity(dropped);
 
             if (!level.isClientSide) {
-
                 setChanged();
                 sendData();
             }
             onContentsChanged();
         }
 
-        if(timer >0&&primaryTank.getSpace() !=0&&secondaryTank.getSpace() !=0){
+        if(timer > 0 && primaryTank.getSpace() != 0 && secondaryTank.getSpace() != 0){
            primaryTank.fill(recipe.getPrimaryResult(), IFluidHandler.FluidAction.EXECUTE);
            secondaryTank.fill(recipe.getSecondaryResult(), IFluidHandler.FluidAction.EXECUTE);
-            timer--;
+           timer--;
         }
     }
 
@@ -168,15 +177,12 @@ public class CokeOvenBlockEntity extends SmartBlockEntity implements IHaveGoggle
     public void lazyTick() {
         super.lazyTick();
         onContentsChanged();
-
-
-
     }
-
-
 
     @Override
     public boolean addToGoggleTooltip(List<Component> tooltip, boolean isPlayerSneaking) {
+        if(level == null)
+            return false;
 
         TFMGTexts.header("coke_oven")
                 .style(ChatFormatting.GRAY)
@@ -184,81 +190,45 @@ public class CokeOvenBlockEntity extends SmartBlockEntity implements IHaveGoggle
 
         if(level.getBlockEntity(controller) instanceof CokeOvenBlockEntity controller)
             if (controller.timer > 0)
-                TFMGTexts.progress((double) controller.timer / 20)
+                TFMGTexts.progress(TFMGTexts.percent((double) controller.timer / controller.totalTime))
                         .style(ChatFormatting.GOLD)
                         .forGoggles(tooltip);
 
-        createFluidTooltip(this,tooltip);
-        TFMGUtils.createItemTooltip(this, tooltip);
+        TFMGUtils.createStorageTooltip(this, tooltip);
         return true;
     }
-    public static boolean createFluidTooltip(CokeOvenBlockEntity be, List<Component> tooltip) {
-        LangBuilder mb = CreateLang.translate("generic.unit.millibuckets");
 
-        /////////
-
-        if(be.level.getBlockEntity(be.controller) instanceof CokeOvenBlockEntity controller) {
-
-
-            IFluidHandler tank = new CombinedTankWrapper(controller.primaryTank, controller.secondaryTank);
-
-
-            if (tank.getTanks() == 0) return false;
-
-            TFMGLang.translate("goggles.fluid_storage").style(ChatFormatting.GRAY).forGoggles(tooltip);
-
-
-            boolean isEmpty = true;
-            for (int i = 0; i < tank.getTanks(); i++) {
-                FluidStack fluidStack = tank.getFluidInTank(i);
-                if (fluidStack.isEmpty()) continue;
-                TFMGLang.fluidName(fluidStack).style(ChatFormatting.GRAY).forGoggles(tooltip, 1);
-                TFMGLang.builder().add(TFMGLang.number(fluidStack.getAmount()).add(mb).style(ChatFormatting.DARK_GREEN)).text(ChatFormatting.GRAY, " / ").add(TFMGLang.number(tank.getTankCapacity(i)).add(mb).style(ChatFormatting.DARK_GRAY)).forGoggles(tooltip, 1);
-                isEmpty = false;
-            }
-            if (tank.getTanks() > 1) {
-                if (isEmpty) tooltip.remove(tooltip.size() - 1);
-                return true;
-            }
-            if (!isEmpty) return true;
-
-            CreateLang.translate("gui.goggles.fluid_container.capacity").add(TFMGLang.number(tank.getTankCapacity(0)).add(mb).style(ChatFormatting.DARK_GREEN)).style(ChatFormatting.DARK_GRAY).forGoggles(tooltip, 1);
-
-        }
-        return true;
-    }
-    public void manageDoors(boolean open){
-
+    public void manageDoors(boolean open) {
+        if(level == null)
+            return;
         for(int i =0; i< size;i++){
             BlockPos pos = getBlockPos().above(i);
-
-            if(level.getBlockEntity(pos) instanceof CokeOvenBlockEntity be&&pos != getBlockPos()){
+            if(level.getBlockEntity(pos) instanceof CokeOvenBlockEntity be && pos != getBlockPos()){
                 be.forceOpen = open;
             }
         }
     }
+
     public boolean isController(){
         return controller == getBlockPos();
     }
-    public void createMultiblock(){
 
+    public void createMultiblock(){
         if(level == null)
             return;
         int maxSize = TFMGConfigs.common().machines.cokeOvenMaxSize.get();
         Direction facing = getBlockState().getValue(FACING);
         if(level.getBlockState(getBlockPos().relative(facing)).is(TFMGBlocks.COKE_OVEN.get())||level.getBlockState(getBlockPos().below()).is(TFMGBlocks.COKE_OVEN.get()))
             return;
-
         int size = 1;
             for(int i = 1;i<=maxSize;i++){
                 boolean cantBuildMultiblock = false;
                 for(BlockPos pos : BlockPos.betweenClosed(getBlockPos(),getBlockPos().above(i).relative(facing.getOpposite(),i))) {
                     if(!level.getBlockState(pos).is(TFMGBlocks.COKE_OVEN.get())){
                         cantBuildMultiblock = true;
-                    }else
-                        if(level.getBlockState(pos).is(TFMGBlocks.COKE_OVEN.get()) &&level.getBlockState(pos).getValue(FACING) != facing){
-                            cantBuildMultiblock = true;
-                        }
+                    } else if(level.getBlockState(pos).is(TFMGBlocks.COKE_OVEN.get()) &&level.getBlockState(pos).getValue(FACING) != facing){
+                        cantBuildMultiblock = true;
+                    }
                 }
                 if(cantBuildMultiblock)
                     break;
@@ -287,18 +257,18 @@ public class CokeOvenBlockEntity extends SmartBlockEntity implements IHaveGoggle
         }
         this.size = size;
     }
-    public void setBlockStates(int size){
 
-        if(size>1){
+    public void setBlockStates(int size) {
+        if(level == null)
+            return;
+        if(size > 1) {
             level.setBlock(getBlockPos(), getBlockState().setValue(CokeOvenBlock.CONTROLLER_TYPE ,CokeOvenBlock.ControllerType.BOTTOM_ON), 2);
             level.setBlock(getBlockPos().above(size-1), getBlockState().setValue(CokeOvenBlock.CONTROLLER_TYPE ,CokeOvenBlock.ControllerType.TOP_ON), 2);
-        } else
-            level.setBlock(getBlockPos(), getBlockState().setValue(CokeOvenBlock.CONTROLLER_TYPE ,CokeOvenBlock.ControllerType.CASUAL), 2);
+        } else level.setBlock(getBlockPos(), getBlockState().setValue(CokeOvenBlock.CONTROLLER_TYPE ,CokeOvenBlock.ControllerType.CASUAL), 2);
 
         for(int i = 0; i < size; i++) {
             BlockPos pos = getBlockPos().above(i);
-
-            if (i > 0&&i != size-1) {
+            if (i > 0 && i != size - 1) {
                 level.setBlock(pos, getBlockState().setValue(CokeOvenBlock.CONTROLLER_TYPE, CokeOvenBlock.ControllerType.MIDDLE_ON), 2);
             }
         }
@@ -309,6 +279,7 @@ public class CokeOvenBlockEntity extends SmartBlockEntity implements IHaveGoggle
         if (level instanceof ServerLevel serverLevel)
            CatnipServices.NETWORK.sendToClientsTrackingChunk(serverLevel, new ChunkPos(getBlockPos()),new CokeOvenPacket(getBlockPos()));
     }
+
     @Override
     public void remove() {
         super.remove();
@@ -324,7 +295,6 @@ public class CokeOvenBlockEntity extends SmartBlockEntity implements IHaveGoggle
 
     public void updateOvenBlocks(){
         if (level == null) return;
-
         int maxSize = TFMGConfigs.common().machines.cokeOvenMaxSize.get();
         Direction facing = getBlockState().getValue(FACING);
         for(BlockPos pos : BlockPos.betweenClosed(getBlockPos(), getBlockPos().below(maxSize).relative(facing.getOpposite(), maxSize))){
@@ -333,23 +303,23 @@ public class CokeOvenBlockEntity extends SmartBlockEntity implements IHaveGoggle
             }
         }
     }
-    private void refreshCapability() {
-        IFluidHandler oldPrimaryFluidCap = primaryFluidCapability;
-        IFluidHandler oldSecondaryFluidCap = secondaryFluidCapability;
-        IItemHandlerModifiable oldItemCap = itemCapability;
 
-        CokeOvenBlockEntity be;
-        if(level.getBlockEntity(controller) instanceof CokeOvenBlockEntity be1){
-            be = be1;
+    private void refreshCapability() {
+        if(level == null)
+            return;
+        CokeOvenBlockEntity cokeOven;
+        if(level.getBlockEntity(controller) instanceof CokeOvenBlockEntity controllerOven){
+            cokeOven = controllerOven;
         } else {
             controller = getBlockPos();
-            be = (CokeOvenBlockEntity) level.getBlockEntity(getBlockPos());
+            cokeOven = this;
         }
-        primaryFluidCapability = be.primaryTank;
-        secondaryFluidCapability = be.secondaryTank;
-        itemCapability = be.inventory;
+        primaryFluidCapability = cokeOven.primaryTank;
+        secondaryFluidCapability = cokeOven.secondaryTank;
+        itemCapability = cokeOven.inventory;
         invalidateCapabilities();
     }
+
     @Override
     public void addBehaviours(List<BlockEntityBehaviour> behaviours) {}
 
@@ -365,6 +335,7 @@ public class CokeOvenBlockEntity extends SmartBlockEntity implements IHaveGoggle
                 (be, context) -> be.itemCapability
         );
     }
+
     @Override
     protected void write(CompoundTag compound, HolderLookup.Provider registries, boolean clientPacket) {
         super.write(compound,registries , clientPacket);
@@ -374,6 +345,7 @@ public class CokeOvenBlockEntity extends SmartBlockEntity implements IHaveGoggle
         compound.put("SecondaryTankContent", secondaryTank.writeToNBT(registries,new CompoundTag()));
         compound.putLong("Controller", controller.asLong());
     }
+
     @Override
     protected void read(CompoundTag compound, HolderLookup.Provider registries, boolean clientPacket) {
         super.read(compound,registries , clientPacket);
